--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="nav2">
+            <div class="nav2">
                 <div class="n2s1">
                     <div>Where</div>
                     <input type="text" placeholder="Search destinations"
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </nav>
     </div>
 </body>
