--- a/index.html
+++ b/index.html
@@ -68,7 +68,465 @@
                     </div>
                 </div>
             </div>
+            <div class="nav3">
+                <div class="nav3se">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 50 50">
+                    <path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"></path>
+                    </svg>
+                </div>
+                <div>
+                    <div class="n3whe">Where to?</div>
+                    <div class="n3fd">
+                        <div>Anywhere  </div>
+                        <div>• Anyweek  </div>
+                        <div>• Add guest</div>
+                    </div>
+                </div>
+            </div>
         </nav>
+        <div class="subnav">
+            <div class="snic1">
+                <div>
+                    <img src="./images/icons/icon-1.webp" alt height="24" width="24">
+                    <div>Icons</div>
+                </div>
+            </div>
+            <div class="snic2">
+                <div>
+                    <img src="./images/icons/icon-2.jpg" alt height="24"
+                        width="24">
+                    <div>Surfing</div>
+                </div>
+            </div>
+            <div class="snic3">
+                <div>
+                    <img src="./images/icons/icon-3.jpg" alt height="24"
+                        width="24">
+                    <div>Farms</div>
+                </div>
+            </div>
+            <div class="snic4">
+                <div>
+                    <img src="./images/icons/icon-4.jpg" alt height="24"
+                        width="24">
+                    <div>Cabins</div>
+                </div>
+            </div>
+            <div class="snic5">
+                <div>
+                    <img src="./images/icons/icon-5.jpg" alt height="24"
+                        width="24">
+                    <div>Treehouses</div>
+                </div>
+            </div>
+            <div class="snic6">
+                <div>
+                    <img src="./images/icons/icon-6.jpg" alt height="24"
+                        width="24">
+                    <div>New</div>
+                </div>
+            </div>
+            <div class="snic7">
+                <div>
+                    <img src="./images/icons/icon-7.jpg" alt height="24"
+                        width="24">
+                    <div>Chef's kitchen</div>
+                </div>
+            </div>
+            <div class="snic8">
+                <div>
+                    <img src="./images/icons/icon-8.jpg" alt height="24"
+                        width="24">
+                    <div>OMG!</div>
+                </div>
+            </div>
+            <div class="snic9">
+                <div>
+                    <img src="./images/icons/icon-9.jpg" alt height="24"
+                        width="24">
+                    <div>Bed & Breakfast</div>
+                </div>
+            </div>
+            <div class="snic10">
+                <div>
+                    <img src="./images/icons/icon-10.jpg" alt height="24"
+                        width="24">
+                    <div>Amazing pools</div>
+                </div>
+            </div>
+            <div class="snic11">
+                <div>
+                    <img src="./images/icons/icon-11.jpg" alt height="24"
+                        width="24">
+                    <div>Castles</div>
+                </div>
+            </div>
+            <div class="snic12">
+                <div>
+                    <img src="./images/icons/icon-12.jpg" alt height="24"
+                        width="24">
+                    <div>National Parks</div>
+                </div>
+            </div>
+            <div class="snic13">
+                <div>
+                    <img src="./images/icons/icon-13.jpg" alt height="24"
+                        width="24">
+                    <div>Tiny homes</div>
+                </div>
+            </div>
+            <div class="snic14">
+                <div>
+                    <img src="./images/icons/icon-14.jpg" alt height="24"
+                        width="24">
+                    <div>Caves</div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="isec-1">
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img1.webp" alt>
+                </div>
+                <div style="font-size: 15px;padding-bottom: 20px; ">
+                    <div>Train at the X-Mansion</div>
+                    <div>Hosted by Jubilee</div>
+                    <div>₹3,191 per guest</div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div class="isec1-img">
+                        <img src="./images/section1/s1-img2.webp" alt>
+                    </div>
+                    <div style="font-size: 15px; padding-bottom: 20px;  ">
+                        <div>Go VIP with Kevin Hart</div>
+                        <div>Hosted by Kevin Hart</div>
+                        <div>Coming 21 August</div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img3.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Join a living room session with Doja</div>
+                    <div>Hosted by Doja Cat</div>
+                    <div>Coming October</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img4.webp" alt>
+                </div>
+                <div style="font-size: 15px;  padding-bottom: 20px;  ">
+                    <div>Stay in Prince's Purple Rain house</div>
+                    <div>Hosted by Wendy and Lisa</div>
+                    <div>Coming October</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img5.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Open the Olympic Games at Musee d'Orsay</div>
+                    <div>Hosted by Mathieu Lehanneur</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img6.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Wake up in the Musee d'Orsay</div>
+                    <div>Hosted by Mathieu Lehanneur</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section1/s1-img7.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+        </div>
+        <br><br><hr><br><br>
+        <div class="past">Past experiences</div>
+        <br>
+        <div class="isec-1">
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img1.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Train at the X-Mansion</div>
+                    <div>Hosted by Jubilee</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div class="isec1-img">
+                        <img src="./images/section2/s2-img2.jpeg" alt>
+                    </div>
+                    <div style="font-size: 15px; padding-bottom: 20px; ">
+                        <div>Go VIP with Kevin Hart</div>
+                        <div>Hosted by Kevin Hart</div>
+                        <div>Sold out</div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img3.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Join a living room session with Doja</div>
+                    <div>Hosted by Doja Cat</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img4.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Stay in Prince's Purple Rain house</div>
+                    <div>Hosted by Wendy and Lisa</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img5.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Open the Olympic Games at Musee d'Orsay</div>
+                    <div>Hosted by Mathieu Lehanneur</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img6.jpeg" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Wake up in the Musee d'Orsay</div>
+                    <div>Hosted by Mathieu Lehanneur</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img7.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img8.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img9.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img10.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img11.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img12.jpeg" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+            <div>
+                <div class="isec1-img">
+                    <img src="./images/section2/s2-img13.webp" alt>
+                </div>
+                <div style="font-size: 15px; padding-bottom: 20px; ">
+                    <div>Live like Bollywood star Janhvi Kapoor</div>
+                    <div>Hosted by Janhvi Kapoor</div>
+                    <div>Sold out</div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="insp">
+            <div class="inspt">
+                Inspiration for future gateways
+            </div>
+            <div class="selist">
+                <div class="slih1">Popular</div>
+                <div class="slih2">Arts & Culture</div>
+                <div class="slih3">Outdoors</div>
+                <div class="slih4">Mountains</div>
+                <div class="slih5">Beach</div>
+                <div class="slih6">Unique stays</div>
+                <div class="slih7">Categories</div>
+                <div class="slih8">Things to do</div>
+            </div>
+            <hr> <br> <br>
+            <div class="inlist">
+                <div class="inlist1">
+                    <ul>
+                        <li class="inli1">Canmore</li>
+                        <li class="inli2">Pet-friendly rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Tucson</li>
+                        <li class="inli2">House rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Anaheim</li>
+                        <li class="inli2">Family-friendly rentals</li>
+                    </ul>
+                </div>
+                <div class="inlist2">
+                    <ul>
+                        <li class="inli1">Benalmadena</li>
+                        <li class="inli2">Holiday rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Jasper</li>
+                        <li class="inli2">Holiday rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Monterey</li>
+                        <li class="inli2">Flat rentals</li>
+                    </ul>
+                </div>
+                <div class="inlist3">
+                    <ul>
+                        <li class="inli1">Marbella</li>
+                        <li class="inli2">House rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Mountain View </li>
+                        <li class="inli2">Holiday rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Paso Robles</li>
+                        <li class="inli2">House rentals</li>
+                    </ul>
+                </div>
+                <div class="inlist4">
+                    <ul>
+                        <li class="inli1">Mijas</li>
+                        <li class="inli2">Holiday rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Devonport</li>
+                        <li class="inli2">Holiday rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Santa Barbara</li>
+                        <li class="inli2">House rentals</li>
+                    </ul>
+                </div>
+                <div class="inlist5">
+                    <ul>
+                        <li class="inli1">Presscott</li>
+                        <li class="inli2">Pet-friendly rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Mallacoota</li>
+                        <li class="inli2">House rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Sonoma</li>
+                        <li class="inli2">Family-friendly rentals</li>
+                    </ul>
+                </div>
+                <div class="inlist6">
+                    <ul>
+                        <li class="inli1">Scottsdale</li>
+                        <li class="inli2">Pet-friendly rentals</li>
+                    </ul><br>
+                    <ul>
+                        <li class="inli1">Ibiza</li>
+                        <li class="inli2">House rentals</li>
+                    </ul><br>
+                </div>
+            </div>
+            <br><br>
+            <hr>
+        </div>
+        <br><br>
+        <footer>
+            <div class="footer">
+                <ul>
+                    <li class="fm1">Support</li>
+                    <li>Help Centre</li>
+                    <li>Aircover</li>
+                    <li>Anti-discrimination</li>
+                    <li>Disability support</li>
+                    <li>Cancellation options</li>
+                    <li>Report neighbourhood concern</li>
+                </ul>
+                <ul>
+                    <li class="fm1">Hosting</li>
+                    <li>Airbnb your home</li>
+                    <li>Aircover</li>
+                    <li>Anti-discrimination</li>
+                    <li>Disability support</li>
+                    <li>Hosting responsibility</li>
+                    <li>Join a free hosting class</li>
+                </ul>
+                <ul>
+                    <li class="fm1">Airbnb</li>
+                    <li>News room</li>
+                    <li>New features</li>
+                    <li>Careers</li>
+                    <li>Disability support</li>
+                    <li>Airbnb.org</li>
+                </ul>
+            </div>
+        </foo-ter>
     </div>
 </body>
 </html>
